--- a/index.html
+++ b/index.html
@@ -7,409 +7,12 @@
       rel="stylesheet"
     />
     <title>Is Melbourne bigger than Sydney?</title>
-    <style type="text/css">
-      h1 {
-        margin-top: 0px;
-        margin-bottom: 24px;
-      }
-
-      p {
-        font-size: 16px;
-        line-height: 24px;
-      }
-
-      #content {
-        max-width: 1000px;
-        margin: 40px 50px;
-      }
-
-      #chart {
-        margin-left: -26px;
-      }
-
-      #chart-container {
-        position: relative;
-        margin-top: 24px;
-      }
-
-      #legend {
-        position: absolute;
-        top: 0px;
-        left: 50px;
-      }
-
-      .legend-row {
-        font-size: 12px;
-        color: #6f6f6f;
-        margin-bottom: 6px;
-        display: flex;
-        align-items: center;
-      }
-
-      .legend-row-red,
-      .legend-row-blue {
-        width: 40px;
-        height: 14px;
-        margin-right: 8px;
-      }
-
-      .legend-row-red {
-        background-color: #f67019;
-      }
-
-      .legend-row-blue {
-        background-color: #5da2d5;
-      }
-
-      #other-options {
-        display: flex;
-        margin: 40px auto;
-      }
-
-      .other-options-option {
-        display: flex;
-        justify-content: center;
-        max-width: 200px;
-        flex-direction: column;
-        margin-right: 50px;
-        padding: 10px;
-        cursor: pointer;
-      }
-
-      input[type="radio"] {
-        display: none;
-      }
-
-      input[type="radio"]:checked + label {
-        background-color: #fecd60;
-        box-sizing: content-box;
-      }
-
-      .other-options-title {
-        font-size: 14px;
-        font-weight: bold;
-        text-align: center;
-      }
-
-      .other-options-text {
-        margin-top: 16px;
-        font-size: 14px;
-        text-align: center;
-      }
-
-      .other-options-icon {
-        font-size: 40px;
-        text-align: center;
-      }
-    </style>
   </head>
   <body>
     <div id="content">
-      <h1>
-        Is Melbourne bigger than Sydney yet?
-        <span style="color: #f67019">No</span>
-      </h1>
-      <p>
-        We all know Melbourne is better than Sydney. Population trends also
-        reflect this fact. Within the next twenty years Melbourne is projected
-        to overtake Sydney and become Australia's biggest/best city 🎉
-      </p>
-      <div id="chart-container">
-        <div id="legend">
-          <div class="legend-row">
-            <span class="legend-row-blue"></span>Melbourne
-          </div>
-          <div class="legend-row">
-            <span class="legend-row-red"></span>Sydney
-          </div>
-        </div>
-        <canvas id="chart"></canvas>
-      </div>
-      <h2>What if...</h2>
-      <p>
-        This graph is a illustrates what population growth would look like if
-        current trends in births, life expectancy, and migration hold. It is one
-        of
-        <a
-          href="http://www.abs.gov.au/AUSSTATS/abs@.nsf/Lookup/3222.0Main+Features12017%20(base)%20-%202066?OpenDocument"
-          >72 projections</a
-        >
-        created by the ABS.
-      </p>
-      <form id="other-options">
-        <input
-          type="radio"
-          onChange="updateProjection('A')"
-          name="projection"
-          value="A"
-          id="optionA"
-        />
-        <label for="optionA" class="other-options-option">
-          <div class="other-options-icon">🚀</div>
-          <div class="other-options-title">Higher Growth</div>
-          <div class="other-options-text">
-            A more optimistic forecast, which assumes more favourable growth
-            factors
-          </div>
-        </label>
-        <input
-          type="radio"
-          onChange="updateProjection('B')"
-          name="projection"
-          value="B"
-          id="optionB"
-          checked
-        />
-        <label for="optionB" class="other-options-option">
-          <div class="other-options-icon">🤷</div>
-          <div class="other-options-title">Current Growth</div>
-          <div class="other-options-text">
-            A more optimistic forecast, which assumes more favourable growth
-            factors
-          </div>
-        </label>
-        <input
-          type="radio"
-          onChange="updateProjection('C')"
-          name="projection"
-          value="C"
-          id="optionC"
-        />
-        <label for="optionC" class="other-options-option">
-          <div class="other-options-icon">🐢</div>
-          <div class="other-options-title">Slower Growth</div>
-          <div class="other-options-text">
-            A more optimistic forecast, which assumes more favourable growth
-            factors
-          </div>
-        </label>
-      </form>
+      <div id="chart-container"><canvas id="chart"></canvas></div>
     </div>
     <script type="text/javascript">
-      const lerp = (x, y, t) => x + t * (y - x);
-      let imgX = null;
-      let imgY = null;
-      let textX = null;
-      let textY = null;
-      let animating = false;
-      const getImageCoords = model => [model.x - 25, model.y + 10];
-      const getTextCoords = model => [model.x - 30, model.y + 52 + 20];
-
-      Chart.plugins.register({
-        afterDraw: function(chartInstance, easingValue) {
-          const intersectPoint = chartInstance.config.options.intersectionPoint;
-          const helpers = Chart.helpers;
-          const ctx = chartInstance.chart.ctx;
-          if (!intersectPoint) {
-            return;
-          }
-          chartInstance.data.datasets.forEach(function(dataset, dsindex) {
-            for (var i = 0; i < dataset.data.length; i++) {
-              if (
-                dsindex === intersectPoint.datasetIndex &&
-                i === intersectPoint.dataIndex
-              ) {
-                var model =
-                  dataset._meta[Object.keys(dataset._meta)[0]].data[i]._model;
-                const image = document.getElementById("arrowAsset");
-
-                // animate arrow
-                const [newImgX, newImgY] = getImageCoords(model);
-                const [newTextX, newTextY] = getTextCoords(model);
-
-                if (easingValue === 1 || imgX === null) {
-                  imgX = newImgX;
-                  imgY = newImgY;
-                  textX = newTextX;
-                  textY = newTextY;
-                }
-
-                if (newImgX !== imgX || newImgY !== imgY) {
-                  animating = true;
-                  ctx.drawImage(
-                    arrowAsset,
-                    lerp(imgX, newImgX, easingValue),
-                    lerp(imgY, newImgY, easingValue),
-                    38,
-                    52
-                  );
-                } else {
-                  ctx.drawImage(arrowAsset, newImgX, newImgY, 38, 52);
-                }
-
-                ctx.fillStyle = "black";
-                ctx.font = "24px Permanent Marker";
-                ctx.textAlign = "right";
-                if (newTextX !== textX || newTextY !== textY) {
-                  ctx.fillText(
-                    intersectPoint.dataLabel,
-                    lerp(textX, newTextX, easingValue),
-                    lerp(textY, newTextY, easingValue)
-                  );
-                } else {
-                  ctx.fillText(intersectPoint.dataLabel, newTextX, newTextY);
-                }
-              }
-            }
-          });
-        }
-      });
-
-      const chartColours = {
-        red: "#f67019",
-        blue: "#5da2d5"
-      };
-
-      const projectionMap = {
-        A: [sydneyProjectionA, melbourneProjectionA],
-        B: [sydneyProjectionB, melbourneProjectionB],
-        C: [sydneyProjectionC, melbourneProjectionC]
-      };
-
-      function getProjection(projectionID) {
-        const [sydney, melbourne] = projectionMap[projectionID];
-        const melbournePoints = historicalLabels
-          .map(x => null)
-          .concat(melbourne);
-        const sydneyPoints = historicalLabels.map(x => null).concat(sydney);
-
-        let intersectionPoint = 0;
-        for (let i = 0; i < melbourne.length; i++) {
-          if (melbourne[i] >= sydney[i]) {
-            intersectionPoint = historicalLabels.length + i;
-            break;
-          }
-        }
-
-        return [sydneyPoints, melbournePoints, intersectionPoint];
-      }
-
-      const labels = historicalLabels.concat(projectionLabels);
-      const [sydneyPoints, melbournePoints, intersectionPoint] = getProjection(
-        "B"
-      );
-      const config = {
-        // The type of chart we want to create
-        type: "line",
-
-        // The data for our dataset
-        data: {
-          labels: labels,
-          datasets: [
-            {
-              label: "Melbourne",
-              backgroundColor: "transparent",
-              borderColor: chartColours.blue,
-              data: melbourneHistorical,
-              pointBorderColor: "transparent"
-            },
-            {
-              label: "Melbourne (Projected)",
-              backgroundColor: "transparent",
-              borderColor: chartColours.blue,
-              data: melbournePoints,
-              pointBorderColor: "transparent",
-              borderDash: [10, 5]
-            },
-            {
-              label: "Sydney",
-              backgroundColor: "transparent",
-              borderColor: chartColours.red,
-              data: sydneyHistorical,
-              pointBorderColor: "transparent"
-            },
-            {
-              label: "Sydney (Projected)",
-              backgroundColor: "transparent",
-              borderColor: chartColours.red,
-              data: sydneyPoints,
-              pointBorderColor: "transparent",
-              borderDash: [10, 5]
-            }
-          ]
-        },
-
-        // Configuration options go here
-        options: {
-          legend: {
-            display: false,
-            position: "left",
-            labels: {
-              generateLabels: () => [
-                {
-                  text: "Melbourne",
-                  index: 0,
-                  fillStyle: chartColours.blue
-                },
-                {
-                  text: "Sydney",
-                  index: 1,
-                  fillStyle: chartColours.red
-                }
-              ]
-            }
-          },
-          intersectionPoint: {
-            datasetIndex: 1,
-            dataIndex: intersectionPoint,
-            dataLabel: labels[intersectionPoint]
-          },
-          tooltips: {
-            enabled: true,
-            mode: "index",
-            position: "nearest",
-            intersect: false,
-            callbacks: {
-              label: function(tooltipItem, data) {
-                let label = data.datasets[tooltipItem.datasetIndex].label || "";
-
-                if (label) {
-                  label = label.replace(/ \(Projected\)/, "") + ": ";
-                }
-                label += tooltipItem.yLabel.toLocaleString();
-
-                return label;
-              }
-            }
-          },
-          scales: {
-            xAxes: [
-              {
-                display: true,
-                ticks: {
-                  maxTicksLimit: 10
-                },
-                gridLines: {
-                  display: false
-                }
-              }
-            ],
-            yAxes: [
-              {
-                gridLines: {
-                  display: false
-                },
-                scaleLabel: {
-                  display: true,
-                  labelString: "Population (millions)"
-                },
-                ticks: {
-                  max: 14 * 1000 * 1000, // 14 million
-                  callback: function(value, index, values) {
-                    return value / 1000 / 1000;
-                  }
-                }
-              }
-            ]
-          }
-        }
-      };
-
-      window.onload = () => {
-        const ctx = document.getElementById("chart").getContext("2d");
-        const chart = new Chart(ctx, config);
-
-        Chart.defaults.global.defaultFontFamily = "'Montserrat', sans-serif";
 
         window.updateProjection = projection => {
           const [
